fixed flex wrap problem, (flex needed to be flex-wrap)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body {
 
 header {
     display: flex;
-    flex: wrap;
+    flex-wrap: wrap;
     flex-grow: 1.5;
     flex-shrink: 1.5;
     padding-top: 20px;
@@ -29,7 +29,7 @@ header {
 
 .current-day {
     display: flex;
-    flex: wrap;
+    flex-wrap: wrap;
     flex-grow: 1.5;
     flex-shrink: 1.5;
     justify-content: center;
@@ -72,7 +72,7 @@ header {
     display: flex;
     flex-grow: 1.5;
     flex-shrink: 1.5;
-    flex: wrap;
+    flex-wrap: wrap;
     justify-content: center;
     height: 339.5px;
     padding-top: 20px;
